# DJMate

./: .gitignore  3d Coordinator.py  Deletealbum.py  README.md  StreamTagger.py  StreamlitGenres.py  main.py  pyproject.toml  upload_album_covers.py
Backend/: llm_interpreter.py  main.py  recommender.py
Backend/Data/: db_interface.py  upload_progress_tracks.json
Backend/OlderFiles/: Ingestor.py  StreamlitGenres.py  processed_tracks.txt
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.css  App.jsx  index.css  oldapp.jsx
Frontend/src/api/: apiClient.js
Frontend/src/components/: CompatibilityIndicator.jsx  CrateInspector.css  CrateInspector.jsx  MusicCloud3D.jsx  NaturalLanguageBar.jsx  PathwayVisualizer.jsx
Frontend/src/hooks/: useCrateManager.js  useRecommendationAPI.js
Frontend/src/styles/: components.css
OlderFiles/: FAISS searcher.py  Ingestor.py  Json Splitter.py  LabelSpreader.py  StreamLIT Ingestor.py  StreamUI.py  TrackEmbedder.py  analysis_results.json
Scripts/: 3d Coordinator.py  build_faiss_index.py  streamLLM.py  streamSimilar.py  upload_album_covers.py
Scripts/Backend/: Test.py  llm_interpreter.py  reccomender.py
Scripts/Backend/OlderFiles/: Deletealbum.py  Fulldiag.py  Input metadata.py  MetadataExtractor.py  Rekordbox parser.py  StreamLIT Ingestor.py  Test_supabase.csv  input embeddings.py
Scripts/Backend/data/: db_interface.py  upload_progress.json
configuration/: requirements.txt
depenency list/: setup.sh  test_main.py
djmate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
